--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Local Bootstrap 4 CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <!-- Bootstrap Icons from node_modules -->
-  <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
   <style>
     html {
